src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_XmlLangPropertySetTwice.xaml


<cc:Custom_Clr_Accepting_XmlLang Culture="en" xml:lang="mr"
 xmlns:cc="clr-namespace:Avalon.Test.CoreUI.Parser;assembly=CoreTestsUntrusted" xmlns:MappingPIGen1="clr-namespace:Avalon.Test.CoreUI.Parser;assembly=CoreTestsUntrusted"
  />	
